SummerCamp 4th Session * Added Controller for MuscleGroup

--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -4,10 +4,27 @@
 
 {% block body %}
     <style>
-        .user-table { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-        .user-table table { width: 100%; border-collapse: collapse; }
-        .user-table th, .user-table td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-        .user-table th { background-color: #f2f2f2; }
+        .user-table {
+            margin: 1em auto;
+            max-width: 800px;
+            width: 95%;
+            font: 18px/1.5 sans-serif;
+        }
+
+        .user-table table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        .user-table th, .user-table td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+
+        .user-table th {
+            background-color: #f2f2f2;
+        }
     </style>
 
     <div class="user-table">
