--- a/templates/muscle_group/tabel.html.twig
+++ b/templates/muscle_group/tabel.html.twig
@@ -1,98 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-    Exercises for {{ muscleGroup.getName() }}
-{% endblock %}
+{% block title %}Exercises for {{ muscleGroup.name }}{% endblock %}
 
 {% block body %}
-    <h1>Exercises for {{ muscleGroup.getName() }}</h1>
-
-    <table class="styled-table">
-        <thead>
-        <tr>
-            <th>Index</th>
-            <th>Name</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
+    <h1>Exercises for {{ muscleGroup.name }}</h1>
+    <ul>
         {% for exercise in exercises %}
-            <tr>
-                <td>{{ exercise.id }}</td>
-                <td>{{ exercise.name }}</td>
-                <td>
-                    <div class="button-group">
-                        <form action="{{ path('edit_exercise', { 'id': exercise.id }) }}">
-                            <button class="btn-edit">
-                                Edit
-                            </button>
-                        </form>
-                        <form action="{{ path('delete_exercise', { 'id': exercise.id }) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                            <input type="hidden" name="_method" value="DELETE">
-                            <button class="btn-delete">
-                                Delete
-                            </button>
-                        </form>
-                    </div>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">No exercises found for this Muscle Group.</td>
-            </tr>
+            <li>{{ exercise.name }}: {{ exercise.description }}</li>
         {% endfor %}
-        </tbody>
-    </table>
-{% endblock %}
-
-{% block stylesheets %}
-    {{ parent() }}
-    <style>
-        .styled-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 1em 0;
-            font-size: 1em;
-            font-family: sans-serif;
-            border: 1px solid #ccc;
-        }
-
-        .styled-table th,
-        .styled-table td {
-            border: 1px solid #ccc;
-            padding: 8px;
-            text-align: left;
-        }
-
-        .styled-table th {
-            background-color: #f0f0f0;
-        }
-
-        .button-group {
-            display: flex;
-            gap: 10px;
-        }
-
-        .button-group button {
-            padding: 5px 10px;
-            cursor: pointer;
-        }
-
-        .btn-edit {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-        }
-
-        .btn-delete {
-            background-color: #f44336;
-            color: white;
-            border: none;
-        }
-
-        .btn-edit:hover,
-        .btn-delete:hover {
-            opacity: 0.8;
-        }
-    </style>
+    </ul>
+    <a href="{{ path('app_muscle_group') }}" class="btn btn-secondary">Back to Muscle Groups</a>
 {% endblock %}
