--- a/templates/exercise/index.html.twig
+++ b/templates/exercise/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Exercises!{% endblock %}
 
-{% block body %}
+{% block stylesheets %}
     <style>
         .example-wrapper {
             margin: 1em auto;
@@ -19,14 +19,15 @@
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-top: 20px;
         }
 
         table, th, td {
-            border: 1px solid black;
+            border: 1px solid #dee2e6;
         }
 
         th, td {
-            padding: 8px;
+            padding: 10px;
             text-align: left;
         }
 
@@ -36,11 +37,22 @@
         }
 
         .button-group button {
-            padding: 5px 10px;
+            padding: 8px 16px;
             cursor: pointer;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
+        }
+
+        .button-group button:hover {
+            background-color: #0056b3;
         }
     </style>
+{% endblock %}
 
+{% block body %}
     <div class="example-wrapper">
         <h1>Exercises</h1>
 
@@ -62,12 +74,12 @@
                     <td>
                         <div class="button-group">
                             <form action="{{ path('edit_exercise', { 'id': exercise.id }) }}">
-                                <button>
+                                <button type="submit">
                                     Edit
                                 </button>
                             </form>
-                            <form action="{{ path('delete_exercise', { 'id': exercise.id }) }}" method="delete">
-                                <button>
+                            <form action="{{ path('delete_exercise', { 'id': exercise.id }) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this exercise?');">
+                                <button type="submit">
                                     Delete
                                 </button>
                             </form>
@@ -76,20 +88,10 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="3">No records found</td>
+                    <td colspan="4">No records found</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
     </div>
-
-    <script>
-        function editExercise(id) {
-            console.log('edit', id);
-        }
-
-        function deleteExercise(id) {
-            console.log('delete', id);
-        }
-    </script>
 {% endblock %}
