--- a/templates/muscle_group/index.html.twig
+++ b/templates/muscle_group/index.html.twig
@@ -1,16 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MuscleGroupController!{% endblock %}
+{% block title %}Muscle Groups{% endblock %}
 
 {% block body %}
     <h1>Muscle Groups</h1>
-    <a href="{{ path('muscle-group_create') }}" class="btn btn-primary">Create Muscle Group</a>
-    <ul>
+    <a href="{{ path('muscle-group_create') }}" class="btn btn-primary mb-3">Create Muscle Group</a>
+
+    <ul class="list-group">
         {% for muscleGroup in muscleGroups %}
-            <li>
+            <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
                 {{ muscleGroup.name }}
-                <a href="{{ path('muscle_group_exercises', {'id': muscleGroup.id}) }}" class="btn btn-secondary">View Exercises</a>
+                <a href="{{ path('exercises_by_muscle_group', {'muscleGroupName': muscleGroup.name}) }}" class="btn btn-secondary">View Exercises</a>
             </li>
+        {% else %}
+            <li class="list-group-item">No muscle groups found.</li>
         {% endfor %}
     </ul>
 {% endblock %}
