--- a/templates/muscle_group/index.html.twig
+++ b/templates/muscle_group/index.html.twig
@@ -2,18 +2,30 @@
 
 {% block title %}Muscle Groups{% endblock %}
 
-{% block body %}
-    <h1>Muscle Groups</h1>
-    <a href="{{ path('muscle-group_create') }}" class="btn btn-primary mb-3">Create Muscle Group</a>
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <style>
+        .list-group-item {
+            margin-bottom: 10px;
+        }
+    </style>
+{% endblock %}
 
-    <ul class="list-group">
-        {% for muscleGroup in muscleGroups %}
-            <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
-                {{ muscleGroup.name }}
-                <a href="{{ path('exercises_by_muscle_group', {'muscleGroupName': muscleGroup.name}) }}" class="btn btn-secondary">View Exercises</a>
-            </li>
-        {% else %}
-            <li class="list-group-item">No muscle groups found.</li>
-        {% endfor %}
-    </ul>
+{% block body %}
+    <div class="container">
+        <h1>Muscle Groups</h1>
+        <a href="{{ path('muscle-group_create') }}" class="btn btn-primary mb-3">Create Muscle Group</a>
+
+        <ul class="list-group">
+            {% for muscleGroup in muscleGroups %}
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    {{ muscleGroup.name }}
+                    <a href="{{ path('exercises_by_muscle_group', {'muscleGroupName': muscleGroup.name}) }}" class="btn btn-secondary">View Exercises</a>
+                </li>
+            {% else %}
+                <li class="list-group-item">No muscle groups found.</li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
