--- a/templates/workout/index.html.twig
+++ b/templates/workout/index.html.twig
@@ -3,32 +3,13 @@
 {% block title %}Exercises!{% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
     <style>
         .example-wrapper {
             margin: 1em auto;
             max-width: 800px;
             width: 95%;
             font: 18px/1.5 sans-serif;
-        }
-
-        .example-wrapper code {
-            background: #F5F5F5;
-            padding: 2px 6px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        table, th, td {
-            border: 1px solid #dee2e6;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
         }
 
         .button-group {
@@ -56,12 +37,12 @@
     <div class="example-wrapper">
         <h1>Workout</h1>
 
-        <table>
-            <thead>
+        <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
             <tr>
-                <th>Index</th>
-                <th>Name</th>
-                <th>Performed At</th>
+                <th scope="col">Index</th>
+                <th scope="col">Name</th>
+                <th scope="col">Performed At</th>
             </tr>
             </thead>
             <tbody>
@@ -70,7 +51,6 @@
                     <td>{{ workout.id }}</td>
                     <td>{{ workout.name }}</td>
                     <td>{{ workout.createdAt|date("m/d/Y h:m")}}</td>
-
                 </tr>
             {% else %}
                 <tr>
