--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><text y='1.2em' font-size='96'>⚫️</text><text y='1.3em' x='0.2em' font-size='76' fill='%23fff'>sf</text></svg>">
+    <link rel="icon"
+          href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><text y='1.2em' font-size='96'>⚫️</text><text y='1.3em' x='0.2em' font-size='76' fill='%23fff'>sf</text></svg>">
 
     {% block stylesheets %}
         <!-- Bootstrap CSS -->
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="{{ asset('css/custom.css') }}" rel="stylesheet">
+        <!-- Custom CSS -->
+        <link href="{{ asset('css/custom.css') }}" rel="stylesheet">
     {% endblock %}
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-        <img src="{{ asset('assets/img/logo.png') }}" width="30" height="30" class="d-inline-block align-top" alt="Logo">
+        <img src="{{ asset('assets/img/logo.png') }}" width="30" height="30" class="d-inline-block align-top"
+             alt="Logo">
         My App
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -50,6 +52,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('muscle-group_create') }}">Create Muscle Group</a>
             </li>
+            {% if is_granted('ROLE_TRAINER') %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('list_users') }}">Users</a>
+            </li>
+            {% endif %}
+
         </ul>
     </div>
 </nav>
