--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -35,11 +35,13 @@
 
 {% block body %}
     <div class="example-wrapper">
-        <h1>Workout</h1>
+        <h1>Workouts for {{ user.name }} </h1>
 
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
             <tr>
+
+
                 <th scope="col">Index</th>
                 <th scope="col">Name</th>
                 <th scope="col">Performed At</th>
@@ -47,18 +49,37 @@
             </tr>
             </thead>
             <tbody>
-            {% for workout in workouts %}
+
+
+            {% for workout in user.workouts %}
+
                 <tr>
                     <td>{{ workout.id }}</td>
                     <td>{{ workout.name }}</td>
-                    <td>{{ workout.createdAt|date("m/d/Y h:m")}}</td>
+
+                    <td>{{ workout.createdAt|date("m/d/Y h:m") }}</td>
+                    <td>
+                        <div class="btn-group" role="group">
+                            <form action="{{ path('app_workout_details', { 'id': workout.id }) }}" method="GET">
+                                <button type="submit" class="btn btn-primary">
+                                    Show
+                                </button>
+                            </form>
+                        </div>
+                    </td>
+
                 </tr>
             {% else %}
                 <tr>
                     <td colspan="3">No records found</td>
                 </tr>
+
+
             {% endfor %}
+
             </tbody>
         </table>
+
+
     </div>
 {% endblock %}
