--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,12 +29,6 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('register_user') }}">Register</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_login') }}">Login</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="{{ path('workout_create') }}">Create Workout</a>
             </li>
             <li class="nav-item">
@@ -53,11 +47,25 @@
                 <a class="nav-link" href="{{ path('muscle-group_create') }}">Create Muscle Group</a>
             </li>
             {% if is_granted('ROLE_TRAINER') %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('list_users') }}">Users</a>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('list_users') }}">Users</a>
+                </li>
             {% endif %}
+        </ul>
 
+        <ul class="navbar-nav ml-auto">
+            {% if app.user %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('register_user') }}">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_login') }}">Login</a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
