--- a/templates/exercise/index.html.twig
+++ b/templates/exercise/index.html.twig
@@ -34,7 +34,7 @@
                                 </button>
                             </form>
                             <form action="{{ path('delete_exercise', { 'id': exercise.id }) }}" method="POST">
-                                <button type="submit" class="btn btn-danger">
+                                <button type="submit" class="btn btn-danger ml-1">
                                     Delete
                                 </button>
                             </form>
