--- a/templates/exercise/exercises_by_muscle_group.html.twig
+++ b/templates/exercise/exercises_by_muscle_group.html.twig
@@ -13,7 +13,7 @@
         .list-group-item {
             padding: 10px;
             margin-bottom: 10px;
-            background-color: #f8f9fa;
+            background-color: #F3FF90;
             border: 1px solid #dee2e6;
             border-radius: 5px;
         }
