--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -35,13 +35,7 @@
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
 
-            {% if app.user %}
-                <div class="alert alert-info mb-3">
-                    You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                </div>
-            {% endif %}
-
-            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
             <label for="username" class="sr-only">Email</label>
             <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" placeholder="Email address" autocomplete="email" required autofocus>
             <label for="password" class="sr-only">Password</label>
@@ -50,6 +44,7 @@
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <button class="btn btn-lg btn-primary btn-block" onclick="window.location.href='{{ path('register_user') }}'">Register</button>
         </form>
     </div>
 {% endblock %}
