--- a/templates/workout/index.html.twig
+++ b/templates/workout/index.html.twig
@@ -20,7 +20,7 @@
         .button-group button {
             padding: 8px 16px;
             cursor: pointer;
-            background-color: #007bff;
+            background-color: var(--primary-color);
             color: #fff;
             border: none;
             border-radius: 4px;
