--- a/templates/workout/index.html.twig
+++ b/templates/workout/index.html.twig
@@ -35,7 +35,7 @@
 
 {% block body %}
     <div class="example-wrapper">
-        <h1>Workout</h1>
+        <h1>Workouts</h1>
 
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
