--- a/templates/muscle_group/index.html.twig
+++ b/templates/muscle_group/index.html.twig
@@ -16,12 +16,18 @@
     <div class="container">
         <h1>Muscle Groups</h1>
 
-
         <ul class="list-group">
             {% for muscleGroup in muscleGroups %}
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     {{ muscleGroup.name }}
-                    <a href="{{ path('exercises_by_muscle_group', {'muscleGroupName': muscleGroup.name}) }}" class="btn btn-secondary">View Exercises</a>
+                    <div>
+                        <a href="{{ path('exercises_by_muscle_group', {'muscleGroupName': muscleGroup.name}) }}" class="btn btn-secondary">View Exercises</a>
+                        <form action="{{ path('delete_muscle_group', { 'id': muscleGroup.id }) }}" method="POST" style="display:inline-block;">
+                            <button type="submit" class="btn btn-danger ml-1">
+                                Delete
+                            </button>
+                        </form>
+                    </div>
                 </li>
             {% else %}
                 <li class="list-group-item">No muscle groups found.</li>
