--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,7 +43,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                {% if is_granted('ROLE_USER' )and not is_granted('ROLE_USER')%}
+                {% if is_granted('ROLE_USER' )and not is_granted('ROLE_TRAINER')%}
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_workout') }}">Workouts</a>
                 </li>
