--- a/templates/workout/index.html.twig
+++ b/templates/workout/index.html.twig
@@ -43,6 +43,7 @@
                 <th scope="col">Index</th>
                 <th scope="col">Name</th>
                 <th scope="col">Performed At</th>
+                <th scope="col">Action</th>
             </tr>
             </thead>
             <tbody>
@@ -51,6 +52,12 @@
                     <td>{{ workout.id }}</td>
                     <td>{{ workout.name }}</td>
                     <td>{{ workout.createdAt|date("m/d/Y h:m")}}</td>
+                    <td> <form action="{{ path('delete_workout', { 'id': workout.id }) }}" method="POST">
+                            <button type="submit" class="btn btn-danger ml-1">
+                                Delete
+                            </button>
+                        </form>
+                    </td>
                 </tr>
             {% else %}
                 <tr>
