--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -36,7 +36,8 @@
         <table class="table table-bordered table-striped">
             <thead class="thead-light">
             <tr>
-                <th>ID</th>
+                <th>Name</th>
+
                 <th>Email</th>
                 <th>Action</th>
 
@@ -45,7 +46,8 @@
             <tbody>
             {% for user in users %}
                 <tr>
-                    <td>{{ user.id }}</td>
+                    <td>{{ user.name}}</td>
+
                     <td>{{ user.email }}</td>
                     <td>
                     <div class="btn-group" role="group">
